--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,54 @@
 <!--index.wxml-->
-<view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+<view>
+  <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" class="swiper-wrapper" indicator-color="{{indicatorColor}}" indicator-active-color="{{indicatorActiveColor}}">
+    <block wx:for="{{swiperImg}}" wx:key="swiperId">
+      <swiper-item>
+        <image src="{{item}}" style="width:100%"></image>
+      </swiper-item>
+    </block>
+  </swiper>
+  <view class="item-wrapper">
+    <view class="item">
+      <image src="../../images/temp/item_01.jpg" mode="widthFix"></image>
+      <view class="item-info">
+        <text class="title">拳皇97游戏介绍和背景故事拳皇97游戏介绍和背景故事</text>
+        <text class="time">2017-06-06</text>
+      </view>
+    </view>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="item-wrapper">
+    <view class="item">
+      <image src="../../images/temp/item_01.jpg" mode="widthFix"></image>
+      <view class="item-info">
+        <text class="title">拳皇97游戏介绍和背景故事拳皇97游戏介绍和背景故事</text>
+        <text class="time">2017-06-06</text>
+      </view>
+    </view>
+  </view>
+  <view class="item-wrapper">
+    <view class="item">
+      <view class="item-info">
+        <text class="title">拳皇97游戏介绍和背景故事拳皇97游戏介绍和背景故事</text>
+        <text class="time">2017-06-06</text>
+      </view>
+    </view>
+  </view>
+  <view class="item-wrapper">
+    <view class="item">
+      <image src="../../images/temp/item_01.jpg" mode="widthFix"></image>
+      <view class="item-info">
+        <text class="title">拳皇97游戏介绍和背景故事拳皇97游戏介绍和背景故事</text>
+        <text class="time">2017-06-06</text>
+      </view>
+    </view>
+  </view>
+  <view class="item-wrapper">
+    <view class="item">
+      <image src="../../images/temp/item_01.jpg" mode="widthFix"></image>
+      <view class="item-info">
+        <text class="title">拳皇97游戏介绍和背景故事拳皇97游戏介绍和背景故事</text>
+        <text class="time">2017-06-06</text>
+      </view>
+    </view>
   </view>
 </view>
