--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,33 @@
-/**index.wxss**/
-.userinfo {
+.swiper-wrapper{
+  width: 100%;
+  height: 387rpx;
+}
+.swiper-wrapper image{
+  width: 100%;
+  height: 387rpx;
+}
+.item-wrapper{
+  padding:0 30rpx;
+}
+.item{
+  padding:30rpx 0;
+  display:flex;
+  justify-content: space-between;
+  border-bottom:1rpx solid #e5e5e5;
+  font-size: 16px;
+}
+.item image{
+  width: 130px;
+  margin-right:20rpx;
+}
+.item-info{
+  width:100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.item-info .time{
+  text-align: right;
+  font-size:12px;
+  color:#d0d0d0;
 }
