--- a/pages/video/video-detail/video-detail.wxss
+++ b/pages/video/video-detail/video-detail.wxss
@@ -11,5 +11,10 @@
 }
 .title image{
   width:30px;
+  height:30px;
   margin-right:10px
+}
+.title text{
+  line-height:30px;
+  font-size:30rpx;
 }
