--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,4 +12,7 @@
       <template is="postItem" data="{{...item}}"></template>
     </view>
   </block>
+  <view class="load-more" wx:if="{{hasMore}}">
+    <text>{{loadTips}}</text>
+  </view>
 </view>
