--- a/pages/video/video-detail/video-detail.wxss
+++ b/pages/video/video-detail/video-detail.wxss
@@ -1,20 +1,39 @@
-.video{
+.video {
   display: flex;
   flex-direction: column;
+  background-color:#fff;
+  margin-bottom:10px;
 }
-.video video{
+
+.video:last-child{
+  margin-bottom:0;
+}
+
+.video video {
   width: 100%;
 }
-.title{
+
+.title {
   display: flex;
-  padding:15rpx 30rpx 15rpx 10rpx;
+  justify-content: space-between;
+  padding: 15rpx 30rpx 15rpx 10rpx;
 }
-.title image{
-  width:30px;
-  height:30px;
-  margin-right:10px
+
+.icon image {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
 }
-.title text{
-  line-height:30px;
+
+.icon text {
   font-size:30rpx;
+  line-height: 30px;
+  vertical-align: middle;
+}
+
+.time {
+  line-height: 30px;
+  font-size:12px;
+  color:#bbb;
 }
