--- a/pages/video/video-detail/video-detail.wxml
+++ b/pages/video/video-detail/video-detail.wxml
@@ -1,48 +1,9 @@
-<view class="video-wrapper">
-  <view class="video">
-    <view class="title">
-      <view class="icon">
-        <image src="../../../images/icon/icon_normal.png" mode="widthFix"></image>
-        <text>拳皇精彩CG</text>
-      </view>
-      <text class="time">2017-06-06</text>
+<import src="../../template/video-template.wxml" />
+
+<view class="vbg">
+  <block wx:for="{{videoList}}" wx:key="videoId">
+    <view class="video-wrapper">
+      <template is="videoItem" data="{{...item,index}}"></template>
     </view>
-    <video src="http://video.ledo.com/anhei2/anhei2_201703_main.mp4"></video>
-  </view>
-</view>
-<view class="video-wrapper">
-  <view class="video">
-    <view class="title">
-      <view class="icon">
-        <image src="../../../images/icon/icon_normal.png" mode="widthFix"></image>
-        <text>拳皇精彩CG</text>
-      </view>
-      <text class="time">2017-06-06</text>
-    </view>
-    <video src="http://video.ledo.com/anhei2/anhei2_201703_main.mp4"></video>
-  </view>
-</view>
-<view class="video-wrapper">
-  <view class="video">
-    <view class="title">
-      <view class="icon">
-        <image src="../../../images/icon/icon_normal.png" mode="widthFix"></image>
-        <text>拳皇精彩CG</text>
-      </view>
-      <text class="time">2017-06-06</text>
-    </view>
-    <video src="http://video.ledo.com/anhei2/anhei2_201703_main.mp4"></video>
-  </view>
-</view>
-<view class="video-wrapper">
-  <view class="video">
-    <view class="title">
-      <view class="icon">
-        <image src="../../../images/icon/icon_normal.png" mode="widthFix"></image>
-        <text>拳皇精彩CG</text>
-      </view>
-      <text class="time">2017-06-06</text>
-    </view>
-    <video src="http://video.ledo.com/anhei2/anhei2_201703_main.mp4"></video>
-  </view>
+  </block>
 </view>
