--- a/pages/skill/skill.wxml
+++ b/pages/skill/skill.wxml
@@ -1,72 +1,23 @@
+<import src="../template/avatar-template.wxml" />
+
 <view class="skill-wrapper">
-  <view class="skill-list" bindtap="onTap">
-    <image src="../../images/temp/kof.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">拳皇</text>
-      <text class="fonts">出招表</text>
+  <scroll-view class="game" scroll-x>
+    <view class="game-nav">
+      <block wx:for="{{game}}" wx:key="gameId">
+        <text class="{{item.iscur ? 'on' : ''}}">{{item.name}}</text>
+      </block>
     </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/sh.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">侍魂</text>
-      <text class="fonts">出招表</text>
+  </scroll-view>
+  <view class="avatar-wrapper">
+    <view class="avatar-tit">
+      <text>拳皇 人物表</text>
     </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/elcs.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">饿狼传说</text>
-      <text class="fonts">出招表</text>
-    </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/hjzb.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">合金弹头</text>
-      <text class="fonts">出招表</text>
-    </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/kof.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">龙虎之拳</text>
-      <text class="fonts">出招表</text>
-    </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/kof.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">武力</text>
-      <text class="fonts">出招表</text>
-    </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/kof.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">月华之剑士</text>
-      <text class="fonts">出招表</text>
-    </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/kof.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">野兽梦魇</text>
-      <text class="fonts">出招表</text>
-    </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/kof.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">心跳魔女</text>
-      <text class="fonts">出招表</text>
-    </view>
-  </view>
-  <view class="skill-list">
-    <image src="../../images/temp/kof.jpg" mode="widthFix"></image>
-    <view class="skill-info">
-      <text class="fontb">回忆之日</text>
-      <text class="fonts">出招表</text>
+    <view class="avatar-list">
+      <block wx:for="{{avatarList}}" wx:key="avatarId">
+        <view class="avatar-wrap" bindtap="onTap" data-id="{{item.id}}">
+          <template is="avatarItem" data="{{...item}}"></template>
+        </view>
+      </block>
     </view>
   </view>
 </view>
