--- a/pages/video/video-detail/video-detail.wxss
+++ b/pages/video/video-detail/video-detail.wxss
@@ -1,39 +1,1 @@
-.video {
-  display: flex;
-  flex-direction: column;
-  background-color:#fff;
-  margin-bottom:10px;
-}
-
-.video:last-child{
-  margin-bottom:0;
-}
-
-.video video {
-  width: 100%;
-}
-
-.title {
-  display: flex;
-  justify-content: space-between;
-  padding: 15rpx 30rpx 15rpx 10rpx;
-}
-
-.icon image {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-  vertical-align: middle;
-}
-
-.icon text {
-  font-size:30rpx;
-  line-height: 30px;
-  vertical-align: middle;
-}
-
-.time {
-  line-height: 30px;
-  font-size:12px;
-  color:#bbb;
-}
+@import "../../template/video-template.wxss";
