--- a/pages/video/video.wxss
+++ b/pages/video/video.wxss
@@ -1,25 +1,33 @@
-.video-list{
-  height:300rpx;
+.vbg {
+  height: 100vh;
+  background-color: #000;
+}
+
+.video-list {
+  height: 300rpx;
   position: relative;
 }
-.video-list image{
-  width:100%;
-  height:300rpx;
+
+.video-list image {
+  width: 100%;
+  height: 300rpx;
 }
-.video-info{
-  width:100%;
-  height:300rpx;
+
+.video-info {
+  width: 100%;
+  height: 300rpx;
   display: flex;
-  align-items:center;
+  align-items: center;
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(0,0,0,.6);
+  background-color: rgba(0, 0, 0, 0.6);
 }
-.video-info text{
-  width:100%;
+
+.video-info text {
+  width: 100%;
   text-align: center;
-  color:#eee;
-  font-size:40rpx;
+  color: #eee;
+  font-size: 40rpx;
   letter-spacing: 4rpx;
 }
