--- a/pages/template/video-template.wxml
+++ b/pages/template/video-template.wxml
@@ -7,12 +7,12 @@
       </view>
       <text class="time">{{time}}</text>
     </view>
-    <view class="video-img" wx:if="{{!isPlay}}" bindtap="onTap" data-index="{{index}}">
+    <view class="video-img" wx:if="{{curIndex !== index}}" bindtap="onTap" data-index="{{index}}">
       <image src="{{image}}" class="video-bgimg" mode="scaleToFill"></image>
       <view class="video-mask">
         <image src="../../../images/icon/icon_play.png"></image>
       </view>
     </view>
-    <video src="{{video}}" id="{{id}}" bindplay="play" wx:if="{{isPlay}}" autoplay="true"></video>
+    <video src="{{video}}" bindplay="play" wx:if="{{curIndex === index}}" autoplay="true"></video>
   </view>
 </template>
