--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,18 @@
-page{
+page {
   font-family: Microsoft YaHei;
-  background-color:#f6f6f6;
-  color:#404040;
-  font-size:24rpx;
+  background-color: #f6f6f6;
+  color: #404040;
+  font-size: 24rpx;
 }
-.load-more{
+
+.load-more {
   padding: 20px 0;
-  text-align:center;
+  text-align: center;
+}
+
+.horizon {
+  width: 100%;
+  height: 1px;
+  background-color: #e5e5e5;
+  margin: 40rpx 0;
 }
