--- a/pages/skill/skill.wxml
+++ b/pages/skill/skill.wxml
@@ -4,7 +4,7 @@
   <scroll-view class="game" scroll-x>
     <view class="game-nav">
       <block wx:for="{{game}}" wx:key="gameId">
-        <text class="{{item.iscur ? 'on' : ''}}" catchtap="onTap" data-id="{{item.id}}" data-index="{{index}}">{{item.name}}</text>
+        <text class="{{currutTab === index ? 'on' : ''}}" bindtap="getAvatar" data-id="{{item.id}}" data-index="{{index}}">{{item.name}}</text>
       </block>
     </view>
   </scroll-view>
@@ -14,7 +14,7 @@
     </view>
     <view class="avatar-list">
       <block wx:for="{{avatarList}}" wx:key="avatarId">
-        <view class="avatar-wrap" bindtap="onTap" data-id="{{item.id}}">
+        <view class="avatar-wrap" data-id="{{item.id}}">
           <template is="avatarItem" data="{{...item}}"></template>
         </view>
       </block>
