--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,10 +1,24 @@
+@import "../template/search-template.wxss";
 @import "../template/item-template.wxss";
 
-.swiper-wrapper{
+.swiper-wrapper {
   width: 100%;
   height: 387rpx;
 }
-.swiper-wrapper image{
+
+.swiper-wrapper image {
   width: 100%;
   height: 387rpx;
+}
+
+.topnav {
+  height: 40px;
+  line-height: 40px;
+  background-color: #ccc;
+  display: flex;
+}
+
+.topnav text {
+  width: 100%;
+  text-align: center;
 }
