--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -23,7 +23,7 @@
   </block>
 </view>
 <view class="search-wrapper" wx:if="{{isShow}}">
-  <view class="search-hot">
+  <view class="search-hot" wx:if="{{searchHotShow}}">
     <view class="search-hot-t">热门游戏</view>
     <view class="search-hot-keys">
       <text>拳皇97</text>
@@ -43,8 +43,12 @@
       <text>八神庵</text>
     </view>
   </view>
-  <view class="search-result">
-
+  <view class="search-result" wx:if="{{!searchHotShow}}">
+    <block wx:for="{{searchList}}" wx:key="searchId">
+    <view class="item-wrapper" bindtap="onTap" data-id="{{item.id}}">
+      <template is="postItem" data="{{...item}}"></template>
+    </view>
+  </block>
   </view>
 </view>
 <view class="load-more" wx:if="{{hasMore}}">
