--- a/pages/skill/skill-list/skill-list.wxml
+++ b/pages/skill/skill-list/skill-list.wxml
@@ -1,16 +1,11 @@
 <import src="../../template/avatar-template.wxml" />
 
 <view class="skill-wrapper">
-  <scroll-view class="game" scroll-x>
-    <view class="game-nav">
-      <block wx:for="{{game}}" wx:key="gameId">
-        <text class="{{currutTab === index ? 'on' : ''}}" bindtap="getAvatar" data-id="{{item.id}}" data-index="{{index}}">{{item.name}}</text>
-      </block>
-    </view>
-  </scroll-view>
   <view class="avatar-wrapper">
     <view class="avatar-tit">
-      <text>拳皇 人物表</text>
+      <image src="{{avatarImage}}" mode="widthFix"></image>
+      <view class="name">{{avatarName}}</view>
+      <view class="info">{{avatarInfo}}</view>
     </view>
     <view class="avatar-list">
       <block wx:for="{{avatarList}}" wx:key="avatarId">
