--- a/pages/skill/skill-list/skill-list.wxss
+++ b/pages/skill/skill-list/skill-list.wxss
@@ -1,9 +1,5 @@
 @import "../../template/avatar-template.wxss";
 
-.skill-wrapper{
-  padding-top: 55px;
-}
-
 .game {
   width: 100%;
   background-color: #fff;
@@ -29,15 +25,30 @@
   display: inline-block;
 }
 
-.avatar-tit {
-  height: 100rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.avatar-tit{
+  margin-bottom: 30px;
 }
 
-.avatar-tit text {
-  font-size: 30rpx;
+.avatar-tit image {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.avatar-tit .name {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.avatar-tit .info {
+  background-color: #393939;
+  margin-top: 300rpx;
+  position: relative;
+  padding: 30rpx;
+  color: #fff;
 }
 
 .avatar-list {
