--- a/pages/template/search-template.wxml
+++ b/pages/template/search-template.wxml
@@ -3,6 +3,6 @@
     <input type="text" placeholder="{{placeholder}}" 
   placeholder-class="placeholder" value='{{searchValue}}' bindfocus="onBindFocus"
   bindconfirm="onBindBlur"/>
-    <text wx:if="{{isShow}}" catchtap="onCancel" class="cancelBtn">返回</text>
+    <text wx:if="{{isSearch}}" catchtap="onCancel" class="cancelBtn">返回</text>
   </view>
 </template>
