--- a/pages/template/search-template.wxml
+++ b/pages/template/search-template.wxml
@@ -2,7 +2,7 @@
   <view class="search">
     <input type="text" placeholder="{{placeholder}}" 
   placeholder-class="placeholder" value='{{searchValue}}' bindfocus="onBindFocus"
-  bindconfirm="onBindBlur"/>
+  bindconfirm="onBindBlur" focus/>
     <text wx:if="{{isSearch}}" catchtap="onCancel" class="cancelBtn">返回</text>
   </view>
 </template>
