--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,45 +1,27 @@
 <import src="../template/item-template.wxml" />
-<import src="../template/search-template.wxml" />
 
-<template is="search" data="{{placeholder,searchValue,isSearch}}"></template>
-<view class="container" wx:if="{{!isSearch}}">
+<view class="search" data-type="txt" catchtap="onSearch">
+  <input type="text" placeholder="请输入游戏角色" disabled="true"/>
+</view>
+<view class="container">
   <swiper indicator-dots autoplay interval="3000" duration="500" circular class="swiper-wrapper" indicator-color="rgba(255,255,255,.3)" indicator-active-color="#ffffff">
     <block wx:for="{{swiperList}}" wx:key="swiperId">
-      <swiper-item bindtap="onTap" data-id="{{item.id}}">
+      <swiper-item catchtap="onTap" data-id="{{item.id}}">
         <image src="{{item.picUrl}}" style="width:100%"></image>
       </swiper-item>
     </block>
   </swiper>
   <view class="topnav">
-    <text data-id='0' bindtap="onNav" class="{{navcur==0?'cur':''}}">热门</text>
-    <text data-id='1' bindtap="onNav" class="{{navcur==1?'cur':''}}">新闻</text>
-    <text data-id='2' bindtap="onNav" class="{{navcur==2?'cur':''}}">公告</text>
-    <text data-id='3' bindtap="onNav" class="{{navcur==3?'cur':''}}">教学</text>
+    <text data-id='0' catchtap="onNav" class="{{navcur==0?'cur':''}}">热门</text>
+    <text data-id='1' catchtap="onNav" class="{{navcur==1?'cur':''}}">新闻</text>
+    <text data-id='2' catchtap="onNav" class="{{navcur==2?'cur':''}}">公告</text>
+    <text data-id='3' catchtap="onNav" class="{{navcur==3?'cur':''}}">教学</text>
   </view>
   <block wx:for="{{postList}}" wx:key="postId">
-    <view class="item-wrapper" bindtap="onTap" data-id="{{item.id}}">
+    <view class="item-wrapper" catchtap="onTap" data-id="{{item.id}}">
       <template is="postItem" data="{{...item}}"></template>
     </view>
   </block>
-</view>
-<view class="search-wrapper" wx:if="{{isSearch}}">
-  <view class="search-hot" wx:if="{{searchHotShow}}">
-    <view class="search-hot-t">热门游戏</view>
-    <view class="search-hot-keys">
-      <text wx:for="{{hotkey}}" data-key="{{hotkey[index]}}" bindtap="searchkey">{{hotkey[index]}}</text>
-    </view>
-    <view class="search-hot-t">热门角色</view>
-    <view class="search-hot-keys">
-      <text wx:for="{{actorkey}}" data-key="{{actorkey[index]}}" bindtap="searchkey">{{actorkey[index]}}</text>
-    </view>
-  </view>
-  <view class="search-result" wx:if="{{!searchHotShow}}">
-    <block wx:for="{{searchList}}" wx:key="searchId">
-    <view class="item-wrapper" bindtap="onTap" data-id="{{item.id}}">
-      <template is="postItem" data="{{...item}}"></template>
-    </view>
-  </block>
-  </view>
 </view>
 <view class="load-more" wx:if="{{hasMore}}">
   <text class="{{isComplete?'complele': ''}}">{{loadTips}}</text>
