--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,16 +1,11 @@
+<import src="../template/swiper-template.wxml" />
 <import src="../template/item-template.wxml" />
 
 <view class="search" data-type="txt" catchtap="onSearch">
   <input type="text" placeholder="请输入游戏角色" disabled="true"/>
 </view>
 <view class="container">
-  <swiper indicator-dots autoplay interval="3000" duration="500" circular class="swiper-wrapper" indicator-color="rgba(255,255,255,.3)" indicator-active-color="#ffffff">
-    <block wx:for="{{swiperList}}" wx:key="swiperId">
-      <swiper-item catchtap="onTap" data-id="{{item.id}}">
-        <image src="{{item.picUrl}}" style="width:100%"></image>
-      </swiper-item>
-    </block>
-  </swiper>
+  <template is="swiper" data="{{swiperList}}"></template>
   <view class="topnav">
     <text data-id='0' catchtap="onNav" class="{{navcur==0?'cur':''}}">热门</text>
     <text data-id='1' catchtap="onNav" class="{{navcur==1?'cur':''}}">新闻</text>
