--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,29 +1,22 @@
 @import "../template/search-template.wxss";
+@import "../template/swiper-template.wxss";
 @import "../template/item-template.wxss";
-
-.swiper-wrapper {
-  width: 100%;
-  height: 387rpx;
-}
-
-.swiper-wrapper image {
-  width: 100%;
-  height: 387rpx;
-}
 
 .topnav {
   height: 40px;
   line-height: 40px;
-  background-color: #efefef;
+  background-color: #0084e0;
   display: flex;
 }
 
 .topnav text {
   width: 100%;
   font-size: 14px;
+  color: #fff;
   text-align: center;
 }
 
 .topnav .cur {
+  color: #333;
   background-color: #f6f6f6;
 }
