--- a/pages/video/video.wxss
+++ b/pages/video/video.wxss
@@ -1,33 +1,31 @@
-.vbg {
-  height: 100vh;
-  background-color: #000;
-}
+@import "../template/search-template.wxss";
+@import "../template/swiper-template.wxss";
+@import "../template/video-template.wxss";
 
-.video-list {
-  height: 300rpx;
-  position: relative;
-}
-
-.video-list image {
-  width: 100%;
-  height: 300rpx;
-}
-
-.video-info {
-  width: 100%;
-  height: 300rpx;
+.topnav {
+  height: 40px;
+  line-height: 40px;
+  background-color: #0084e0;
   display: flex;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.6);
 }
 
-.video-info text {
+.topnav text {
   width: 100%;
+  font-size: 14px;
+  color: #fff;
   text-align: center;
-  color: #eee;
-  font-size: 40rpx;
-  letter-spacing: 4rpx;
+}
+
+.topnav .cur {
+  color: #333;
+  background-color: #f6f6f6;
+}
+
+.item-wrapper {
+  padding: 30rpx 0 0 0;
+}
+
+.item {
+  float: left;
+  margin: 0 0 30rpx 30rpx;
 }
