--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -13,7 +13,7 @@
     <text data-id='3' catchtap="onNav" class="{{navcur==3?'cur':''}}">教学</text>
   </view>
   <block wx:for="{{postList}}" wx:key="postId">
-    <view class="item-wrapper" catchtap="onTap" data-id="{{item.id}}">
+    <view class="item-txt" catchtap="onTap" data-id="{{item.id}}">
       <template is="postItem" data="{{...item}}"></template>
     </view>
   </block>
