--- a/pages/template/search-template.wxml
+++ b/pages/template/search-template.wxml
@@ -1,8 +1,8 @@
 <template name="search">
   <view class="search">
     <input type="text" placeholder="{{placeholder}}" 
-  placeholder-class="placeholder" value='{{searchValue}}' bindfocus="onBindFocus"
+  placeholder-class="placeholder" value='{{searchValue}}' bindblur="onBindBlur"
   bindconfirm="onBindBlur" focus/>
-    <text wx:if="{{isSearch}}" catchtap="onCancel" class="cancelBtn">返回</text>
+    <text catchtap="onCancel" class="cancelBtn">返回</text>
   </view>
 </template>
