--- a/pages/template/video-template.wxss
+++ b/pages/template/video-template.wxss
@@ -1,33 +1,35 @@
-.video{
-  width:330rpx;
+.video {
+  width: 330rpx;
+  float: left;
+  margin: 30rpx 0 0 30rpx;
 }
 
-.video-img{
-  width:330rpx;
-  height:200rpx;
+.video-img {
+  width: 330rpx;
+  height: 200rpx;
   position: relative;
   border-radius: 5px;
-  overflow:hidden;
+  overflow: hidden;
   margin-bottom: 10rpx;
 }
 
-.video-img image{
-  width:330rpx;
-  height:200rpx;
+.video-img image {
+  width: 330rpx;
+  height: 200rpx;
 }
 
-.video-title{
-  width:330rpx;
-  height:30rpx;
-  line-height:30rpx;
-  overflow:hidden;
+.video-title {
+  width: 330rpx;
+  height: 30rpx;
+  line-height: 30rpx;
+  overflow: hidden;
 }
 
-.video-mask{
-  width:330rpx;
-  height:200rpx;
-  background-color:rgba(0,0,0,.3);
-  display:flex;
+.video-mask {
+  width: 330rpx;
+  height: 200rpx;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
@@ -35,7 +37,7 @@
   left: 0;
 }
 
-.video-mask image{
+.video-mask image {
   width: 100rpx;
   height: 100rpx;
 }
