--- a/pages/video/video.wxml
+++ b/pages/video/video.wxml
@@ -1,7 +1,7 @@
 <import src="../template/swiper-template.wxml" />
 <import src="../template/video-template.wxml" />
 
-<view class="search" data-type="txt" catchtap="onSearch">
+<view class="search" data-type="video" catchtap="onSearch">
   <input type="video" placeholder="请输入游戏角色" disabled="true"/>
 </view>
 <view class="container">
@@ -11,7 +11,7 @@
     <text data-id='1' catchtap="onNav" class="{{navcur==1?'cur':''}}">教学</text>
     <text data-id='2' catchtap="onNav" class="{{navcur==2?'cur':''}}">排行</text>
   </view>
-  <view class="item-wrapper">
+  <view class="video-wrapper">
     <block wx:for="{{videoList}}" wx:key="videoId">
       <view class="item" catchtap="onTap" data-id="{{item.id}}">
         <template is="videoItem" data="{{...item}}"></template>
