--- a/pages/skill/skill.wxml
+++ b/pages/skill/skill.wxml
@@ -1,22 +1,22 @@
 <view class="sbg">
   <block wx:for="{{skillList}}" wx:key="skillId">
-    <view class="skill-wrapper" bindtap="onToggle" data-id="{{index}}" wx:if="{{item.sublink.length}}">
+    <view class="skill-wrapper" wx:if="{{item.sublink.length}}">
       <view class="skill-list">
-        <image src="{{item.image}}" mode="widthFix"></image>
-        <view class="skill-info">
+        <image src="{{item.image}}" mode="scaleToFill"></image>
+        <view class="skill-info" catchtap="onToggle" data-id="{{index}}">
           <text>{{item.title}}</text>
         </view>
         <view class="sub-skill sub-skill" wx:if="{{type === index}}">
-          <view class="sub-skill-block" bindtap="onTap" data-id="{{itemSub.subID}}" wx:for="{{item.sublink}}" wx:for-index="idx" wx:for-item="itemSub"  wx:key="subskillId">
+          <view class="sub-skill-block" catchtap="onTap" data-id="{{itemSub.subID}}" wx:for="{{item.sublink}}" wx:for-index="idx" wx:for-item="itemSub"  wx:key="subskillId">
             {{itemSub.subTitle}}
           </view>
         </view>
       </view>
     </view>
-    <view class="skill-wrapper" data-id="{{item.id}}" bindtap="onTap" wx:if="{{!item.sublink.length}}">
+    <view class="skill-wrapper"  wx:if="{{!item.sublink.length}}">
       <view class="skill-list">
-        <image src="{{item.image}}" mode="widthFix"></image>
-        <view class="skill-info">
+        <image src="{{item.image}}" mode="scaleToFill"></image>
+        <view class="skill-info" data-id="{{item.id}}" catchtap="onTap">
           <text>{{item.title}}</text>
         </view>
       </view>
