--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -14,7 +14,7 @@
       <text wx:for="{{actorkey}}" wx:key="actorkeyID" data-key="{{actorkey[index]}}" bindtap="searchkey">{{actorkey[index]}}</text>
     </view>
   </view>
-  <view class="search-result" wx:if="{{!searchHotShow}}">
+  <view class="search-result {{searchType === 'video'?'search-result-video':'search-result-txt'}}" wx:if="{{!searchHotShow}}">
     <block wx:for="{{searchList}}" wx:key="searchId">
       <view class="item-video" bindtap="onTapVideo" data-id="{{item.id}}" wx:if="{{searchType === 'video'}}">
         <template is="videoItem" data="{{...item}}"></template>
