--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -11,16 +11,22 @@
 }
 
 .search-hot-t{
-  font-size:28rpx;
+  font-size:14px;
   color:#acacae;
   margin: 20rpx 0;
 }
 
 .search-hot-keys text{
-  padding:10rpx;
+  padding:10rpx 15rpx;
   background-color:#fff;
   border:1px solid #ccc;
   border-radius: 10rpx;
   margin:10rpx;
   display:inline-block;
+  font-size:14px;
+  color:#333;
+}
+
+.search-result-video{
+  padding: 0 0 0 10rpx;
 }
