--- a/pages/skill/skill.wxss
+++ b/pages/skill/skill.wxss
@@ -9,6 +9,7 @@
 
 .skill-list image {
   width: 100%;
+  height: 200rpx;
 }
 
 .skill-info {
@@ -26,12 +27,12 @@
   width: 100%;
   text-align: center;
   color: #eee;
-  font-size: 40rpx;
+  font-size: 26px;
   letter-spacing: 4rpx;
 }
 
 .sub-skill-block {
-  font-size:30rpx;
+  font-size:18px;
   padding:10px 0;
   color: #fff;
   text-align: center;
