--- a/pages/template/search-template.wxss
+++ b/pages/template/search-template.wxss
@@ -6,8 +6,19 @@
   align-items: center;
 }
 
+.search .word{
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 10px;
+  background-color: #fff;
+  padding: 0 10px;
+  color:#808080;
+}
+
 .search input {
   width: 100%;
+  height: 30px;
   line-height: 30px;
   border-radius: 10px;
   background-color: #fff;
