--- a/pages/template/video-template.wxml
+++ b/pages/template/video-template.wxml
@@ -1,7 +1,7 @@
 <template name="videoItem">
   <view class="video">
     <view class="video-img">
-      <image src="{{image}}" class="video-bgimg" mode="aspectFit"></image>
+      <image src="{{image}}" class="video-bgimg" mode="scaleToFill"></image>
       <view class="video-mask">
         <image src="/images/icon/icon_play.png"></image>
       </view>
