--- a/pages/template/video-template.wxss
+++ b/pages/template/video-template.wxss
@@ -1,32 +1,32 @@
 .video {
-  width: 330rpx;
+  width: 340rpx;
   float: left;
-  margin: 30rpx 0 0 30rpx;
+  margin: 20px 0 0 20rpx;
 }
 
 .video-img {
-  width: 330rpx;
+  width: 340rpx;
   height: 200rpx;
   position: relative;
-  border-radius: 5px;
   overflow: hidden;
-  margin-bottom: 10rpx;
+  margin-bottom: 10px;
 }
 
 .video-img image {
-  width: 330rpx;
+  width: 340rpx;
   height: 200rpx;
 }
 
 .video-title {
-  width: 330rpx;
+  width: 340rpx;
   height: 30rpx;
   line-height: 30rpx;
   overflow: hidden;
+  font-size:14px;
 }
 
 .video-mask {
-  width: 330rpx;
+  width: 340rpx;
   height: 200rpx;
   background-color: rgba(0, 0, 0, 0.3);
   display: flex;
