--- a/pages/video/video.wxml
+++ b/pages/video/video.wxml
@@ -2,7 +2,7 @@
 <import src="../template/video-template.wxml" />
 
 <view class="search" data-type="video" catchtap="onSearch">
-  <input type="video" placeholder="请输入游戏角色" disabled="true"/>
+  <text class="word">请输入游戏角色</text>
 </view>
 <view class="container">
   <template is="swiper" data="{{swiperList}}"></template>
