--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -2,7 +2,7 @@
 <import src="../template/item-template.wxml" />
 <import src="../template/video-template.wxml" />
 
-<template is="search" data="{{placeholder,searchValue}}"></template>
+<template is="search" data="{{placeholder,searchValue,isClose}}"></template>
 <view class="search-wrapper">
   <view class="search-hot" wx:if="{{searchHotShow}}">
     <view class="search-hot-t">热门游戏</view>
